# numb3r

./: .gitignore  CMakeLists.txt  README.md  unit_tests.cpp
doc/man_pages/: miller-rabin(3).md  miller-rabin(7).md  parallelization(7).md
lib/: basic_operations.hpp  numth.hpp  typedefs.hpp
src/: CMakelists.txt  basic_operations.hpp  miller_rabin.cpp  miller_rabin.hpp  numth.cpp
src/primality/: basic_operations.cpp  basic_operations.hpp  miller_rabin.hpp
test/: CMakeLists.txt  basic_ops_test.cpp  miller_rabin_test.cpp  unit_tests.cpp
